--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/integral_log.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/integral_log.html
@@ -4,12 +4,13 @@
 
 {% block css%}
     <style>
-    
+
 /*
  * user_center 积分日志页面样式
  */
 .xui-integralLogPage {
     background-color: #fff;
+    width:100%;
    /* background-image: -webkit-linear-gradient(left, #FFFFFF 108px, #E0E0E0 108px, #E0E0E0 110px,  #FFFFFF 110px);
     background-image:    -moz-linear-gradient(left, #FFFFFF 108px, #E0E0E0 108px, #E0E0E0 110px,  #FFFFFF 110px);
     background-image:     -ms-linear-gradient(left, #FFFFFF 108px, #E0E0E0 108px, #E0E0E0 110px,  #FFFFFF 110px);
@@ -33,6 +34,8 @@
 .xui-integralLogPage .xui-integralLogList {
     margin: 0;
     padding-top: 35px;
+    width: 100%;
+    background-color: red;
 }
 .xui-integralLogPage .xui-listItem{
     display:table;
