--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/integral_log.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/integral_log.html
@@ -186,7 +186,7 @@
                                     {% if log.integral_count > 0 %}
                                     <span class=" xui-text-blue em8">+{{log.integral_count}}</span>
                                     {% else %}
-                                    <span class=" xui-text-red em8">-{{log.integral_count}}</span>
+                                    <span class=" xui-text-red em8">{{log.integral_count}}</span>
                                     {% endif %}
                                 </p>
                             </div>
