--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/integral_log.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/integral_log.html
@@ -120,8 +120,8 @@
     -moz-border-radius: 8px;
     border-radius: 8px;*/
     height: 40px;
-    margin-top: 5px;
-    margin-bottom:5px; 
+    padding-top: 10px;
+    padding-bottom:10px; 
     padding-right: 10px;
     padding-left: 10px;
 }
